@@ -14,17 +14,25 @@ COM_CONTENT_ARTICLE_MANAGER=Article Manager
 # View and layout titles and descriptions
 #
 
-COM_CONTENT_ARCHIVE_VIEW_DEFAULT_DESC=com content archive view default desc
+COM_CONTENT_ARCHIVE_VIEW_DEFAULT_DESC=Display all archived articles.
 COM_CONTENT_ARCHIVE_VIEW_DEFAULT_TITLE=Archived Articles
-COM_CONTENT_ARTICLE_VIEW_DEFAULT_DESC=com content article view default desc
+COM_CONTENT_ARTICLE_VIEW_DEFAULT_DESC=Display a single article.
 COM_CONTENT_ARTICLE_VIEW_DEFAULT_TITLE=Single Article
-COM_CONTENT_CATEGORY_VIEW_BLOG_DESC=com content category view blog desc
-COM_CONTENT_CATEGORY_VIEW_BLOG_TITLE=List Articles in a Category (multi-column; introductions)
-COM_CONTENT_CATEGORY_VIEW_DEFAULT_DESC=com content category view default desc
-COM_CONTENT_CATEGORY_VIEW_DEFAULT_TITLE=Single Category (optional sub-categories and articles)
-COM_CONTENT_CATEGORIES_VIEW_DEFAULT_DESC=Shows a list of all the article categories.
-COM_CONTENT_CATEGORIES_VIEW_DEFAULT_TITLE=List All Categories (basic links; no articles)
-COM_CONTENT_FRONTPAGE_VIEW_DEFAULT_DESC=com content frontpage view default desc
-COM_CONTENT_FRONTPAGE_VIEW_DEFAULT_TITLE=List Featured Articles (multi-column; introductions)
-COM_CONTENT_SUBMIT_VIEW_DEFAULT_DESC=com content submit view default desc
+COM_CONTENT_CATEGORY_VIEW_BLOG_DESC=Displays article introductions in a single or multi-column layout.
+COM_CONTENT_CATEGORY_VIEW_BLOG_TITLE=List Articles in a Category
+COM_CONTENT_CATEGORY_VIEW_DEFAULT_DESC=Displays optional sub-categories and articles.
+COM_CONTENT_CATEGORY_VIEW_DEFAULT_TITLE=Single Category
+COM_CONTENT_CATEGORIES_VIEW_DEFAULT_DESC=Shows a list of all the article categories within a category.
+COM_CONTENT_CATEGORIES_VIEW_DEFAULT_TITLE=List All Categories
+COM_CONTENT_FRONTPAGE_VIEW_DEFAULT_DESC=Displays article introductions in a single or multi-column layout.
+COM_CONTENT_FRONTPAGE_VIEW_DEFAULT_TITLE=List Featured Articles
+COM_CONTENT_SUBMIT_VIEW_DEFAULT_DESC=Create a submit or edit article on the front-end.
 COM_CONTENT_SUBMIT_VIEW_DEFAULT_TITLE=Submit or Edit an Article
+COM_CONTENT_CATEGORY_VIEW_FEATURED_TITLE=Featured Articles
+COM_CONTENT_CATEGORY_VIEW_FEATURED_DESC=Show all featured articles.
+COM_CONTENT_FORM_VIEW_DEFAULT_TITLE=Default Form
+COM_CONTENT_FORM_VIEW_DEFAULT_DESC=Default
+
+
+CHOOSE_CATEGORY_LABEL=Choose a category
+CHOOSE_CATEGORY_DESC=Choose a category desc
