@@ -12,8 +12,9 @@ COM_NEWSFEEDS.CATEGORIES=Categories
 # View and layout titles and descriptions
 #
 
-COM_NEWSFEEDS_CATEGORY_VIEW_DEFAULT_DESC=com newsfeeds category view default desc
+COM_NEWSFEEDS_CATEGORY_VIEW_DEFAULT_DESC=Show all newsfeeds within a category.
 COM_NEWSFEEDS_CATEGORY_VIEW_DEFAULT_TITLE=List Newsfeeds in a Category
-COM_NEWSFEEDS_NEWSFEED_VIEW_DEFAULT_DESC=com newsfeeds newsfeed view default desc
+COM_NEWSFEEDS_NEWSFEED_VIEW_DEFAULT_DESC=Show a single newsfeed.
 COM_NEWSFEEDS_NEWSFEED_VIEW_DEFAULT_TITLE=Single Newsfeed
-
+COM_NEWSFEEDS_CATEGORIES_VIEW_DEFAULT_DESC=Show all the newsfeed categories within a category.
+COM_NEWSFEEDS_CATEGORIES_VIEW_DEFAULT_TITLE=List All Newsfeed Categories
