@@ -13,6 +13,8 @@ COM_WEBLINKS.CATEGORIES=Categories
 #
 
 COM_WEBLINKS_CATEGORY_VIEW_DEFAULT_DESC=com weblinks category view default desc
-COM_WEBLINKS_CATEGORY_VIEW_DEFAULT_TITLE=List Weblinks in a Category
-COM_WEBLINKS_SUBMIT_VIEW_FORM_DESC=com weblinks submit view form desc
-COM_WEBLINKS_SUBMIT_VIEW_FORM_TITLE=Submit or edit a Weblink
+COM_WEBLINKS_CATEGORY_VIEW_DEFAULT_TITLE=List Web Links in a Category
+COM_WEBLINKS_CATEGORIES_VIEW_DEFAULT_DESC=Show all the web link categories within a category.
+COM_WEBLINKS_CATEGORIES_VIEW_DEFAULT_TITLE=List All Web Link Categories
+COM_WEBLINKS_FORM_VIEW_DEFAULT_DESC=Display a form to submit a web link in the front-end.
+COM_WEBLINKS_FORM_VIEW_DEFAULT_TITLE=Submit or Edit a Web Link
