@@ -65,7 +65,7 @@ JGRID_HEADING_ENABLED=Enabled
 JGRID_HEADING_HITS=Hits
 JGRID_HEADING_ID=ID
 JGRID_HEADING_LANGUAGE=Language
-JGRID_HEADING_MENU_TYPE=Menu Type
+JGRID_HEADING_MENU_ITEM_TYPE=Menu Item Type
 JGRID_HEADING_ORDERING=Ordering
 JGRID_HEADING_PUBLISHED=Published
 JGRID_HEADING_ROW_NUMBER=#
